FIX: ajustado permissão dos arquivos

--- a/notebooks/spark_minio.ipynb
+++ b/notebooks/spark_minio.ipynb
@@ -80,7 +80,7 @@
    "source": [
     "# instancia um cliente e cria um bucket caso ele não exista\n",
     "client = get_minio_client()\n",
-    "if bucker_name not in client.list_buckets():\n",
+    "if bucket_name not in client.list_buckets():\n",
     "    client.make_bucket(bucket_name)"
    ]
   },
